[package]
name = "translate-storage"
version = "0.1.0-pre"
description = "Manipulate translation catalogs in PO format."
authors = ["Jan Hudec <bulb@ucw.cz>"]
license = "MIT"

documentation = "https://docs.rs/translate-storage"
repository = "https://github.com/rust-locale/translate-storage/"
readme = "README.md"
keywords = ["translate", "po", "uniforum po", "file"]

[dependencies]
lazy_static = "0.2"
regex = "0.2"

[package.metadata.release]
upload-doc = true
