[package]
name = "translate-storage"
version = "0.0.1-pre"
description = "Manipulate translation catalogs in PO format."
authors = ["Jan Hudec <bulb@ucw.cz>"]
license = "MIT"

documentation = "https://docs.rs/translate-storage"
repository = "https://github.com/rust-locale/translate-storage/"
readme = "README.md"
keywords = ["translate", "po", "uniforum po", "file"]
# XXX: Any suitable categories?
# categories = [ … ]

[badges]
travis-ci = { repository = "rust-locale/translate-storage" }
appveyor = { repository = "rust-locale/translate-storage" }

[dependencies]
lazy_static = "0.2"
locale_config = "*" # locale_config always newest!
regex = "0.2"

[package.metadata.release]
upload-doc = true
